--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "0.3.0",
-  "name": "vscode-dark-syntax",
+  "name": "inkdrop-theme-vscode-dark-syntax",
   "description": "VS Code Dark+ inspired syntax theme",
   "author": "Marco Laux<contact@marcaux.de>",
   "license": "MIT",
